--- a/syntaxes/talon.tmLanguage.yml
+++ b/syntaxes/talon.tmLanguage.yml
@@ -72,7 +72,7 @@ repository:
     # (?=$|\s)
     name: constant.numeric.talon
   varname:
-    match: ([a-zA-Z0-9._])(_(list|\d+))?
+    match: ([a-zA-Z0-9._])(_(list|\d+)(?=[^a-zA-Z0-9._]))?
     name: variable.parameter.talon
     captures:
       "2":
